--- a/R0_tail/now work/volatile/dirt/fon sheet/redhood/крассная шапочка.md
+++ b/R0_tail/now work/volatile/dirt/fon sheet/redhood/крассная шапочка.md
@@ -1,3 +1,10 @@
+
+дом маркиза
+Амелия
+
+редхуд симург любовь срыв слава любовь признание согласие помощь, морг, 3джи злые славы.
+кто из них моя дочь? я не помню
+
 красная шапочка через призму наркотиков-пирожков и волка-мамыного друга
 изнасилование
 
