--- a/R0_tail/now work/volatile/dirt/scena/0.1 лаба неф спик.md
+++ b/R0_tail/now work/volatile/dirt/scena/0.1 лаба неф спик.md
@@ -1,57 +1,97 @@
-"Оператор говорит(ОГ) - Диссоциация четвёртого уровня."
-"Монитор отмечает - В кровотоке замечены не санкционированные представители симейства адамантановых."
+
+"Оператор: Диссоциация четвёртого уровня."
+"Монитор: В кровотоке замечены не санкционированные представители симейства адамантановых."
 
 Усилием воли я отклеился от влажных теней и заикающихся голосов.
-Заряженную Узором "Систему Целитель" изменил под синтез гормонов ускоряющих метаболизм, синтез фермента осуществляющего катаболизм адамантановых, синтез кортизола.
+Заряженную Узором "Систему Целитель" изменил под синтез кортизола, синтез гормонов ускоряющих метаболизм, синтез фермента осуществляющего катаболизм адамантановых.
 
-Понимание концепции времени начало востанавливатся. Вспомнил Прядь, взрыв, пыль, темноту, вонарики в лиццо... 
+Я снова начинаю осознавать течение времени. Я вспоминаю Прядь, взрыв, пыль, темноту, фонарики в лиццо...
 
-Оганизмы припрятаные под моим рабочим комбинезоном, я отправил к волосам для выращивания там споровых мешочков.
+Я отмечаю запах хвои и болота...
 
-"ОГ - А это точно СКП?".
+Другой Я, множественный. Греюсь в чане с дрожжами, меня "тревожит" изменение температурного режима в чане и незнакомые вибрации снаружи нашей обители.
 
-Спастя минуту диссоциативный эффект закончился, ко мне вернулся полный контроль над мышцами. Я запустил синтез бевых комплексов. Глаза я не открывал, но чувствовал как меня укладывают на койку и пристёгивают ремнями.
+Третий, тоже Я. Первое отличие которое я замечаю, это то что у меня нет члена.
+- Прядь ты в сознании? - Голос пробуждает воспоминание про пожилого мужчину в черном. Ральф. У него глубокий и тёплый голос. Я смертельно устала. Руки немеют и мёрзнут. Темно. В ушах шумит словно от морской раковины.
 
-Организмы принялись производить кислоты и разъедать ими отверстия в комбинезоне, открывая себе путь наружу.
+Первый Я и организмы припрятаные под моим рабочим комбинезоном, отправиляю их в волосы на голове, для выращивания там споровых мешочков.
 
-"ОГ - вероятно СКП таким образом выводят своего тайного агента из игры, не раскрывая его."
+Гремят выстрелы. Меня парализует от страха. Барабанные перепонки обжигает болью.
 
-Меня погрузили, зарычал двигатель машина тронулась. Мы ехали в тишине. Машина подскакивала на разбитом асфальте. Я словил себя на том что переживаю за Прядь. Нужно будет обязательно направить её к врачу. 
+"Оператор: А это точно СКП?".
 
-"ОГ - Перекидышы могут телепортироватся к Пряди прямо в едущий фургон? Можем ли мы предупредить бойцов об этом? Они её вырубили так же как и меня? Она здесь? Или мы в разных машинах?"
+Третий Я, чувствую тёплую руку у себя на плече. Меня переворачивают на спину. Я слышу другой голос у себя в голове и в памяти всплывает его имя, Васелиск:
 
-Справа от меня, снаружи, в стенку машины что-то врезалось, со звуком "Шарах!!".
-Я испугался от неожиданности и открыл глаза, как раз вовремя чтобы уебатся плечём в солдата, а ебалом в потолок.
+- Ты в своей лабе. Гриб тебя подлатал. На вас напали. Тебе нужно "прыгать" от сюда. Адреналин 10 микрограмм.
+- Сама можешь? - шепот Ральфа раздаёться из Леса.
 
-Споры с волос начали распылятся. По ощущениям машина перевернулась на бок и проскреблась по асфальту. Моя органика полезла наружу, выстреливая споры в попытке дать мне больший обзор. Моя койка была перевернута, моему взору был доступен верхний левый угол фургона. Один край койки упирался в левую стенку, а второй в потолок. Под влиянием гравитации я смемтился вниз к левой стенке, но держался на ремнях.
+Я чувствую удар в грудную клетку. Мой пульс подскакивает. Сознание проясняется, мысли ускоряются словно кто-то переключил скорость со второй велесипедной, на вторую болидную. Я раскрываю глаза. Вокруг мрак и лучи фонариков. Я включаю свою силу и "прыгаю в Лес".
 
-Дверь фургона открылась прозвучали выстрелы не летального оружия и всё погрузилось во тьму отрезавшую меня от любых звуков. На секунду я даже прихуел от такой качественной сенсорной депривации. Я отправил организмы на ремни с правого края и начал ослаблять их кислотой.
+Рывок в низ. Секунда полной сенсорной депривации. Я переключаюсь в нормальную форму и оказываюсь в воде. Она пытается попасть мне в нос и рот. Я выпускаю немного воздуха. Темень не проглядная. Я чувствую как пузырьки воздуха проскальзывают по моим губам вправо. Я поворачиваюсь туда и делаю несколько мощьных гребков. Всплываю на поверхность. Вокруг лунный свет и болотные кувшинки. У моего лицца на одном листе лягушка. Она громко меня приветствует протяжным " - Кваа!!". Я выплываю на торфяный берег. Снова возвращаюсь состояние Излома, обессилено падаю спиной в грязь и зову остальных:
+
+- Что у нас?
+- Слава богам, девочка как ты?! - я узнаю визгливый голос Табаки. Меня коробит от этого его "девочка".
+- Я, ок. Буду готова для подсказок через две минуты. Что там происходит?! - я лгу, я не ок, меня морозит, бьёт ознобом и очень болит рана. Я задираю футболку и провожу пальцами на месте пулевого отверстия в боку, шершавому, желтому бугорку. От неё в разные стороны расходятся ветки "капиляров".
+- АХаха! Да там Аааадище натууууральное!!!! Ты бы видела, город задыхается в смоге! Пикникзоны сплошной костёр! Просто страшный сон гринписа!...
+- Чистота?! - я вклиниваюсь в его восторженый поток.
+- Дааа! Бля! Все прилетели, ебашат в полную силу. Тебе точно ничего не нужно? А то мне пора.
+- Вали. - я переключаюсь в "норму".
+
+Под кваканье лягушек я сажусь на колени у берега. Одной рукой у прижимаю рану, другой опираюсь на берег у воды для равновесия. Я со стоном склоняюсь губами к воде и утоляю жажду. 
+
+Руки в крови и болотной тине, вытираю об футболку. Впереди болото с торфяными островками, кустарники в перемешку с камышами. Я слышу треск ветки в нескольких метрах позади. Оборачиваюсь. Левой рукой прижимаю рану, но сразу отдёргиваю руку. Нельзя показывать слабость. Правая рука ныряет в карман штанов, я вытаскиваю опасную бритву и сжимаю в кулаке не раскрывая. Выпрямляю спину.
+
+Впереди стволы деревьев в трёх метрах от меня. Из-за одного из них выглядывает Саара. Я узнаю его по воспоминаниям Бледного, которыми меня угощал Табаки.
+
+Саара ядовит, гипнотизирует песнями, любит гарячую кровь, живёт в норе где-то под Холмами.
+
+- Здраствуйте, Василиск. - стрекочет Саара на птичьем диалекте. Хлопает горизонтальными веками. Прижимается грудью и щекой к коре дерева, шумно вздыхает. 
+
+- Здравствуйте, Саара. - Я удерживаю зрительный контакт не моргая.
+
+Кости Саары просвечиваются сквозь бледную плоть. Губы его белые и тонкие, на них сдержання улыбка. Я убиваю комара у меня на плече, хлопнув по плечу. Саара проблем с комарами не испытывает. Его кусать нельзя.
+
+Наваждение проходит. Первый Я, отмечаю что диссоциативный эффект заканчивается, ко мне возвращается контроль над мышцами. Я запустил синтез бевых комплексов. Глаза я не открываю. Слышу гудение мотора. Я лежу на мягком. Руки и ноги прижаты, словно ремнями к кровати.
+
+Организмами я произвожу кислоты и разъедаю ими отверстия в комбинезоне, открывая себе путь наружу.
+
+"Оператор: Вероятно СКП таким образом выводят своего тайного агента из игры, не раскрывая его."
+
+Я думаю о том что нужно отправить Прядь к врачу. Я не уверен как будут заживать вены и сосуды из моих организмов, без моей постоянной поддержки.
+
+Справа от меня, снаружи, что-то большое врезается в метал. Испытываю чувство невесомости. Открываю глаза. Я привязан ремнями к койке. Слева и справа люди с автоматами, в армейской экипировке, в противогазах. Меня с кроватью бросает в бойцов слева. Потолок бъёт меня в лиццо. Удар слева и скрежет метала об асфальт снаружи. Кровать переворачивается вверх ногами. Я утыкаюсь лиццом вниз в левую стенку перевёрнутого фургона. Не издав ни звука. Солдаты выбрались из фургона, зазвучали выстрелы. 
+
+Всё погрузилось во тьму отрезавшую меня от любых звуков. На секунду я даже прихуел от такой качественной сенсорной депривации. Я отправил организмы на ремни с правого края и начал ослаблять их кислотой.
+
+Споры с волос начали распылятся. Моя органика полезла наружу, выстреливая споры в попытке дать мне больший обзор.
 
 Кто бы не напал на нас, он явно не в моей весовой категории. Фургоны СКП были миниатюрними подобиями танков, тяжелые, бронированые и оснащенные под противодействие маскам с рейтингом бугая.
 
-"ОГ - Если это Перекидыши, стоит нам бежать с ними?"
+"Оператор: Если это Перекидыши, стоит нам бежать с ними?"
 
-За пару рывков я освободился от ремней, оттолкнул койку, засветился Ночесветкой зелёного цвета, видимость осталась нулевая. Выбросил порцию спор, во все стороны. Они оседали на стены, койку, скамейку и пол. Витали в воздухе помагая мне немного ориентироватся в пространстве, я прошел к выходу распылив споры с вытянутых рук, понял что выход свободен и вышел из фургона. СЦ сообщала о мышцах повреждённых резкими движениями, но уже активно регенерирующих. Вещества мгновенно увеличивающие силу, не давали еквивалентного повышения прочности мышц и связок. Хоть я и снабжал себя каждый день веществами улучшающими мои кости, связки и скелетные мышци.
+За пару рывков я освободился от ремней, откинул койку, засветился Ночесветкой зелёного цвета, видимость осталась нулевая. Выбросил порцию спор, во все стороны. Они оседали на стены, койку, скамейку и пол. Витали в воздухе помагая мне немного ориентироватся в пространстве, я прошел к выходу распылив споры с вытянутых рук, понял что выход свободен. Выходя из фургона споткнулся и упал на руки. Система Целитель сообщала о мышцах повреждённых резкими движениями, когда я рвал ремни, я их не чувствовал из-за адреналина и боевого микса. Вещества мгновенно увеличивающие силу, не давали еквивалентного повышения прочности мышц и связок. Хоть я и снабжал себя каждый день веществами улучшающими мои кости, связки и скелетные мышци.
 
-Я успел сделать пару шагов когда мои споры осели на движущийся объект в двух метрах, справа от меня. Было страшно, случайно напоротся на хрень перевернувшую фургон СКП или в едущую машину. Мы еще на дороге? Я один тут слепошарый? Может это секретная сила Бледного? Если они кластер то у них должно быть по четыре силы на каждого и одна основная?
+Я боялся случайно напоротся на хрень перевернувшую фургон или в едущую машину. По этому стоял на месте и распылял споры вокруг.
 
-Пока я тупил события развивались. Помеченый спорами обеъект упал на землю, переместился за машину. Споры отметили два объекта в трёх метрах от меня, они медленно приближались. Тьма расступилась на два метра передомной. Сверху пролился солнечный свет.
+"Оператор: Может обсудим слона в комнате?"
 
-В этот круг света вошли двое мужчина в мотоциклетной коже и шлеме с поднятым забралом из которого текла тьма. Девочка в обтягивающем черном боди с лиловыми полосами, светло-серым декоративным глазом, черная маска на верхней половине лицца и блондинистые волосы. 
+У Перекидышей в комманде еще двое, Ральф и Табаки. Или СКП изобрело какой-то, новый анастетик вызывающих ахуенно реалистичные галлюцинации. Выгодней верить в первое. Если перекидыши кластер, то у них должно быть по шесть слыбых одинаковых сил на каждого и одна основная? Если верить моему глюку, то Табаки умеет передавать воспоминания. Остаётся Ральф и тьма.
+
+Тьма расступилась на два метра передомной. Сверху пролился солнечный свет. 
+В этот круг света вошли двое. Я вздрогнул от неожиданности. Мои споры начали сообщать мне о том что осели на их одежде, только когда они вышли из тьмы.
+Мужчина в мотоциклетном кожанном костюме и шлеме с поднятым забралом из которого текла тьма. Девочка в обтягивающем черном боди с лиловыми полосами, светло-серым декоративным глазом на груди, черная маска на верхней половине лицца и блондинистые волосы. 
+
 - Иди со мной если хочешь жить. - сказала блонда улыбнувшись.
-- Хочу жить, но нужно забрать напарницу. Убери тьму в машине. - я повернулся боком и шагнул назад. Тьма в кузове расступилась. Но внутри никого небыло, толко одна койка и две прибитые к полу скамейки.
-- Она наверное во второй машине.
-- Нет второй машины. И нам порра драпать, пока нас не догнали дроны. - Пробасил создатель тьмы.
 
-Тьма разступилась показывая дорогу с двумя полосами, столкнувшимися машинами, людьми в гражданском стоящими и сидящими на асвальте. Получив назад возможность видеть, они начали разбегатся. Машина СКП была одна. За то было три четырёх лапых монстра, самый крупный размером с фургон. Они были в шыпах и костяных пластинах. На них были ошейники и цепи от ошейников тянулись к кейпу с собачей маской, в берцах черных джинсах и зелёной куртке милитари.
+Тьма разступилась показывая дорогу с двумя проезжими полосами, столкнувшимися машинами, людьми в гражданском стоящими и сидящими на асвальте. Получив возможность видеть, они начали разбегатся. Машина СКП была одна. За то было три четырёх лапых монстра, самый крупный размером с фургон. Они были в шыпах и костяных пластинах. На них были ошейники и цепи от ошейников тянулись к кейпу с собачей маской, в берцах черных джинсах и зелёной куртке милитари.
 
-Я насчитал четырёх СКПшников в полном обмундировании и безсознательном состоянии.
+Четверо СКПшников разбросаны вокруг, в полном обмундировании и безсознательном состоянии.
 
 Четвёртый кейп был одет в высокие ботинки, легинсы, свободную белую рубашку с витиеватым узором и маску в венецианском стиле, она закрывала верхнюю половину лицца и к ней крепилась серебряная корона. В руках у него была палка шокер  вроде тех что используют на слонах и автомат одного из поверженых противников. Он и блонда были молодыми, вероятно в возрасте между школой и универом.
 
-Коронованый закинул ремень автомата на плече, прицепил на пояс шокер и запрыгнул на одного из монстров. Я отметил что на спинах у тварей двухместные сёдла. Создатель тьмы забрался в седло за Коронованым.
+Коронованый закинул ремень автомата на плече, прицепил на пояс шокер и запрыгнул на одного из монстров. Я отметил что на спинах у тварей двухместные сёдла. Создатель тьмы забрался в седло на другого монстра.
 
-Собачья маска забралась на самого крупного. Блонда забралась в седло на третьего и крикнула:
+Собачья маска забралась на самого крупного. Блонда забралась в седло на последнего и крикнула:
 - Давай с нами. Расскажу как мы украли тебя из такого же фургона в прошлый раз.
 
 Я проигнорировал её руку и запрыгнул в седло животом вперёд за блондой. Ухватился за него руками и перекинул ногу через седло. Обрадовался когда оказалось что у этого седла нет перегородки отделявшей меня от задницы блонды.
@@ -60,16 +100,16 @@
 
 Тьма сомкнулась над нашими головами, но остались просветы по бокам и спереди.
 
-Собачья маска свистнула в собачий свисток. И мы резко сорвались с места. Я обнял блонду и взялся за ручку седла спереди.
+Собачья маска свистнула в собачий свисток. И мы резко сорвались с места. Я обнял блонду и взялся за ручку седла спереди, перед ней.
 
 - Что это за создания?! - Крикнул я своей жокейше, прикусив язык из-за тряски.
 - Собаки Адской Гончей!
 - А тебя как зовут?
 - Сплетница!
 
-Мы пронеслись через Доки верхом на собаках под прекрытием тьмы. Мрак во время забега открывал просветы в своей тьме открывая путь собакам Адской Гончей. От Сплетницы пахло парфюмом с запахами цитруса, мокрого дерева и бергамота.
+Мы бежали через Доки верхом на собаках под прекрытием тьмы. Мрак во время забега открывал просветы в своей тьме открывая путь собакам Адской Гончей. От Сплетницы пахло парфюмом с запахами цитруса, мокрого дерева и бергамота.
 
-- Кто вы?
+- Кто вы? - я продолжал удовлетворять своё любопытство.
 - Независимые найомники!
 
 Я "случайно" сьехал по седлу, толкнув пахом её задницу. Край её губ тронула улыбка.
@@ -79,161 +119,83 @@
 - Я не умею.
 - С моей помощью сможешь.
 - Что у тебя за сила?
-- Мыслитель.
+- Мыслитель-Предсказатель.
 
-Я сосредоточился на фантазировании всякой мерзости, не хотелось смутить её своим стояком. Собаки резко свернули в право, я позволил себе сильнее прижатся к Сплетнице. Судя по заброшенным складским помещениям сменившим жилые домики, мы покинули Доки и двигались к Трамвайному Депо. Сверху нас накрывало покрывало из тьмы. Сплетница первая прервала молчание:
-- Ты работал с ними добровольно?
-- Да. Вы везёте меня к заказчику?
-- Нет. В безопасное место, как прибудем я ему позвоню. Убери с меня споры, я знаю что ты пометил Мрака и отмечаешь дорогу споровым следом.
-- Понял, принял..
-"ОГ - Зональный Умник типа Бледного?".
-Сплетница крикнула:
-- Чисто!
-Сука свистнула, собаки начали сбрасывать скорость. Мрак убрал тьму. Мы прошли через замусореный сквер к контейнеру высотой в два этажа.
-Слева были железнодорожные пути, справа сквер с голыми деревьями и скамейками.
-Мы слезли с собак. Мрак открыл контейнер. Зайдя внутырь махнул правой рукой по стенке, щелкнул выключателем включая тусклую лампочку под потолком контейнера. Здесь был стол и три стула в центре. Мрак пересёк контейнер и на противоположном конце открыл еще один проход на улицу. Сплетница взяла меня за руку и провела к столу. Я, она и Мрак сели за стол. Собако-монстры уляглись в проходе через который мы вошли, их хозяйка стояла у выхода выглядывая нуружу, сложив руки на груди она опиралась плечём на стенку контейнера у выключателя. Регент сел на противоположном конце контейнера на пол и принялся разсматривать краденый автомат.
+Я сосредоточился на фантазировании всякой мерзости, не хотелось смутить её своим стояком. Собаки резко свернули в право, я позволил себе сильнее прижатся к Сплетнице. Мы забежали на подземную парковку. Сплетница сказала Мраку где расположены камеры. Тьма вокруг нас разступилась, но осталась в дальних концах парковки скрывая видео камеры.
 
-Сплетница достала из квадратной жесткой ячейки на поясе, пачку сигарет и зажигалку бросила на стол. Они упали в центр и я только теперь заметил что на столе лежала белая картонная папка.
+Мы спешились, Сплетница сказала мне:
+- Ждём партнёров. Ты работал с Перекидышами добровольно?
+- Да. Как вы знали где меня искать?
+- Убери с меня споры, я знаю что ты пометил Мрака и отмечал дорогу споровым следом.
+- Понял, принял... - Я убрал сних споры и разрядил споры в воздухе на парковке.
+"Оператор: Зональный Умник типа Бледного?".
 
-- Угощайся. В папке отчёт СКП по Перекидышам.
+- Заказчик собрал нас час назад, а потом дал адресс где ждать фургон. Моё мнение, у него есть свой человек в СКП. - у нее был пояс карманами и петлями. Там были нож, пара телефонов, глок. Из карманов на поясе, она вытащила пачку сигарет и зажигалку. Протянула мне. Я распечатал пачку, достал две сигареты. Протянул ей пачку с сигаретой и прикурил себе. Она отрицательно мотнула головой.
 
-Я распечатал новую пачку и взял сигарету, закурил, вернул пачку на стол. Беря папку отметил что за пачку никто не взялся. Открыв папку пробежал глазами по тексту.
+- Оставь себе, я не курю.
 
+"Оператор: Пхахаха. Лох."
+
+Я курю. Все молчат. Я прощупываю нагрудный карман с кристалом от Бледного. 
+
+- Сука можешь вытаскивать собак, это всё. - Сказала Сплетница. 
+Собаки начали уменьшаться. С них начали отпадать куски мяса. 
+- Кто-то знает что значит, Dono Omen Memoria? - спрашиваю я.
+- Omen это знамение, Memoria это память, Dono это вообще китайский вроде. А что? - Говорит коронованый.
+- Бледный из Перекидышей, сказал это подарив мне брелок. Я не успел спросить что это значит. Я Грибник, можно просто Гриб.
+- Регент - отозвался коронованый.
+- Мрак.
+- Адская Гончая.
+
+Она и Мрак достав ножи, ковырялися в разваливающихся кучах мяса. Вытащили от туда четырёх пёселей. Самый крупный чуть выше моего колена.
+
+На парковку въехал фургон. Обычный грязно серый немного ржавый. За рулём и на пасажирском сиденьи, два лысых мужчины в спортивных куртках. Машина остановилась в паре метров от нас.
+
+- Ты обещала кое что рассказать. - напомнил я Сплетнице.
+- Расскажу по дороге.
+
+Все обошли фургон, открыли двери и начали загружатся. Мои вещи, телефоны, маячёк и другое, остались в лабе.
+
+- Подбросите меня в центр.
+- Как пожелаешь. Потом.
+
+Я зашел в фургон последним. Захлопнул дверь, сел скраю на единственное свободное место на двух скамейках, рядом с Мраком. Дальше сидели Адская Гончая, с собаками и Регент.
+Напротив нас. сидели Сплетница, двое мужчин в джинсах, клетчатых рубашках. На локтях, коленях у них были щитки. Они были в бронежелетах и гладких металических масках. На груди по кобуре с пистолетом. Четвёртым сидел кейп в цветастом клоунском наряде. Мы встретились с ним глазами. Он кивнул мне.
+- Арлкекин. - Представился он.
+- Гриб. - я ответил и выжидательно уставился на Сплетницу. Машина тронулась с места.
+Первым заговорил Мрак
 - Хочу дать тебе информацию к размышлению и обрисовать перспективы отрудничества. - заговорил Мрак. - Пару месяцев назад наш Заказчик, заплатил нам за твоё похищение. Но потом тебя похитили у нашего Заказчика. 
+
 В разговор встряла Сплетница, она паралельно печатала в смарте:
-- Сила Пряди создаёт помехи Мыслителям и из-за неё мы не могли тебя найти и предвидеть нападение Перекидышей на бойцов Заказчика. - Она оторвалась от печатания в телефоне и посмотрела на меня. - Заказчик говорит что Прядь скончалась по дороге в больницу. Но думаю это ложь, вероятней СКП хотят скормить дезу Перекидышам.
+- Сила Пряди создаёт помехи Мыслителям и из-за неё мы не могли тебя найти и предвидеть нападение Перекидышей на людей Заказчика. - Она оторвалась от печатания в телефоне и посмотрела на меня.
 
 - Кто меня конвоировал в прошлый раз?
-- В прошлый раз тебя пришлось отбирать у Батареи и Теневого Сталкера. - Сказал Мрак.
-- Как вы меня находите?
-- Магия. - улыбнулась Сплетница. Присмотревшись, я бы дал её не больше восемнадцати лет. - Перекидыши работают на Крассную Перчатку. Они тебе врали и использовали тебя. Подробнее о том что они такое, прочтёшь в отчёте.
-Она замолчала и естафету перехватил Мрак:
-- Мы можем тебе помочь, прикроем если они захотят тебя вернуть. Мы хотим пригласить тебя в комманду.
-"ОГ - Гладко стелят.":
-- В прошлый раз Перекидыши до меня добрались. Почему в этот раз у них не получится?
-- В тот раз у них нет Пряди. По поводу твоих услуг. Нужен препарат который избавит меня от мигрений из-за злоупотребления силой, а комманде могут пригодится исцеляющие препараты и твои боевые стимуляторы.
+- В прошлый раз тебя пришлось отбирать у Батареи и Теневого Сталкера. - Мрак сложил руки на груди.
+- Ты знал что Перекидыши работают на Крассную Перчатку? - Перекинув ногу на ногу, покачивала носком чёрного кросовка с пурпурными линиями.
+- Нет. Они не говорили.
+- Ты знаешь кто это?
+- Какие-то Русские наёмники?
+- Скорее мафия и в США с этой недели их запишут в международную террористическую организацию. Ты уже думал о смене комманды?
+- В прошлый раз Перекидыши до меня добрались. Что если они на захотят расторгать наше с ними сотрудничество? Будете за меня дратся? - я не сдержал кривую улыбку, но быстор её погасил. Я немного переместил грибы на лицце, давая больше воздуха коже.
+- Думаю мы сможем с ними договорится. По поводу твоих услуг. Нужен препарат который избавит меня от мигрений из-за злоупотребления силой, а комманде могут пригодится исцеляющие препараты и твои боевые стимуляторы.
 - Как ты можешь мне помо...
-- Мне нужно не тормозящее и не повышающее количество ложных подсказок от моей силы. Для этого тебе нужен трёхмерный узор, - она замолчала, разблокировала смарт поводила пальцем по экрану и повернула ко мне. Я затянулся, стряхивая пепел на пол. - вот такое в основе и расходится по остальным слоям смягчаясь справа и делаясь острее к низу.
+- Мне нужно вещество не тормозящее и не повышающее количество ложных подсказок от моей силы. Для этого тебе нужен трёхмерный узор, - она замолчала, разблокировала смарт поводила пальцем по экрану и повернула ко мне. - Вот такое в основе и расходится по остальным слоям смягчаясь справа и делаясь острее к низу.
 
-Я посмотрел на закарлючку. Перевернул правую ладонь вверх, создал Узор над ладонью придал ему предложенный Сплетницей Узор. Попросил у Агента скорректировать его под организм синтезирующий лекарство от мигрени. Синтезировал порцию вещества в себе и загнал её в Монитор. Агент сказал что вещество работает с одним из серотониновых рицепторов воздействие на который может заглушать мигрени и кластерные головные боли, но против мигрени Мыслителей он менее эффективен.
-Я повторил эту инфу Сплетнице, она перевернула листочек и дала мне другой узор.
+Я посмотрел на закарлючку. Перевернул правую ладонь вверх, создал Узор над ладонью придал ему предложенный Сплетницей Узор. Попросил у Агента скорректировать его под организм синтезирующий лекарство от мигрени. Синтезировал порцию вещества в себе и загнал её в Монитор. Агент сказал что вещество работает с одним из серотониновых рицепторов, воздействие на него может заглушать мигрени и кластерные головные боли, против мигрени Мыслителей он менее эффективен.
+
+Я повторил эту инфу Сплетнице, она показала мне другой узор.
 - Как работает твоя сила? - спросил я, меняя Узор в соответствии с новым примером.
 - Этот секрет только для членов комманды. - Она подмигнула мне. Я переживал о том что она может читать мои мысли и по этому фантазировал не стесняясь в надежде доказать или опровергнуть эту теорию.
-Она написала что-то в телефоне и вернула его на колено. С продолжил:
-- Я не боец. Я против убийств. Какие заказывы выполняете? - Я перевёл взгляд на отчёт СКП о Российской террористической групировке "Перекидыши".
+Она написала что-то в телефоне и вернула его на колено. Я продолжил:
+- Я не боец и я против убийств. Какие заказы вы выполняете?
 - Наш профиль кражи и шпионаж. Мы сможем помочь друг другу. - Она откинулась на спинку, запустила пальцы в волосы и провела ими пару раз распушивая прическу. Телефон Мрака за вибрировал, он достал кнопочный телефон из штанов, глянул в экранчик из-за тьмы клубящейся в шлеме.
-- Заказчик хочет купить у тебя те вещества которые ты использовал чтобы пережить ножевые и навалять напавшим на тебя Барыгам, когда тебя приняли в прошлый раз. - Он поднялся, скомандовал остальным собиратся.
-Сплетница достала из пояса примитивный кнопочный телефон и протянула мне. 
-- Наш контакт занесен в память. Набери как прояснишь для себя ситуацию. Но не затягивай, потеря двух членов может сделать Перекидышей агресивными.
-Она подошла ко ммне и наклонившись шепнула:
-- Подрочи прежде чес звонить мне.
+- Заказчик хочет купить у тебя те вещества которые ты использовал чтобы пережить ножевые и навалять напавшим на тебя Барыгам, когда тебя приняли в прошлый раз.
+- Мне для работы нужна лаборатория.
 
+Я посмотрел на Сплетницу. 
+Она читает только мои мысли или "мысли" Агента тоже? Если я обращусь к куратору она узнает? Кто её Заказчик? Она знают что я крот? Что если Перекидыши так тестируют меня на вшивость? Что если Перекидыши решили так от меня избавится? Что если мы сейчас едем к бочке с кислотой?
 
-
-Она читает только мои мысли или "мысли" Агента тоже? Если я обращусь к куратору она узнает? Кто её Заказчик? Как они узнавали где и когда будет фургон? Они знают что я крот? Они точно преступники? Что если куратор меня так тестирует на вшивость? Что если Перекидыши так тестируют меня на вшивость? Что если Перекидыши решили так от меня избавится?
-
-"ОГ - Бром против убийства паралюдей. У нас не достаточно данных."
+"Оператор: Бром против убийства паралюдей. У нас не достаточно данных."
 
 - Как называется выша комманда?
-Сплетница и Мрак, сели каждый на отдельную собаку.
-- Undersiders. - Бросил Коронованый, запрыгивая в седенье к Адской Гончей. Та свистнула и они побежали.
-
-Я закурил еще одну, открыл папку и пробежался по отчёту в котором было много строчек замазаных черным, я пробегал глазами по тексту задерживаясь чтобы повторить инфу про себя и лучше запомнить.
-
-1992 год пожар в интернате ⬛⬛⬛⬛⬛⬛ Дом. Более сорока жертв.⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛
-1996 год нападение на военную лабораторию ⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛
-⬛⬛⬛⬛⬛⬛ более десяти раненых госслужащих,⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛ 
-⬛⬛⬛⬛⬛⬛ один убитый парачеловек класса Технарь работавший с ⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛
-2000 год с поддельными докумментами,⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛
-⬛⬛⬛⬛⬛⬛ вступают в частную военезированную организацию наёмников "Красная Рукавичка".⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛
-2008 год Елитная Армия России(ЕАР), находит личные дела учившихся в интернате ⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛
-⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛ Попытка задержания проваливается ⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛
-2009 год ⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛ пересекают кордон из Мексики в США, записаны в базу данных как беженцы от политического преследования. ⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛
-2010 год ⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛ поселяются в Броктон-Бей. Регистрируют организацию Омут занимающуюся оказанием психологической помощи.⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛
-08.07.2010год ⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛ ⬛⬛⬛⬛⬛⬛⬛⬛⬛  регистрируют "Сообщество Истого Сознания"⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛
-25.09.2010 ⬛⬛⬛⬛⬛⬛ ⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛СКП получает от ЕАР досье на пятерых бывших сотрудников "Крассной Рукавички". Исходя из досье, аналитик ⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛
-⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛, Омут применяют силы Властелинов чтобы привлекать людей в СИС и собирать с них пожертвования. ⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛ ⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛ ⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛ ⬛⬛⬛⬛⬛ ⬛⬛⬛⬛⬛ ⬛⬛⬛ своих агентов. Омут клонируют телефон ⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛ ⬛⬛⬛⬛⬛⬛⬛ ⬛⬛⬛⬛⬛⬛ СКП и получают доступ к докумментам ⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛ ⬛⬛⬛⬛⬛⬛⬛⬛⬛ ⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛, на основе этих данных ⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛ ⬛⬛⬛⬛⬛⬛⬛⬛⬛ ⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛ готовят обвинение в шпионаже против США в интересах русской террористической организации "Красная Рукавичка". Отзываются регистрации Омут и СИС. Организации будут объявлены вне закона. Перекидыши официально перизнаюся организованой преступной парачеловеческой групировкой. Разрешение на арест подписано ⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛⬛
-
-Я закрыл папку.
-
-Если я свяжусь с Куратором, сила Сплетницы скажет ей об этом? Прочтёт она об этом у меня в мыслях? Перекидыши узнали, что я их сдал и это их способ меня скинуть? Напавшие были из СКП? Заказчик это случаем не Бром? Этот отчёт не липа? Перекидыши еще не вернули Прядь? Как наебать телепатку? Поделится ли Батарея инфой по Сплетнице? Пойдут ли Перекидыши на сделку с СКП если не смогут вытащить Прядь? Или возьмут заложников и потребуют обмен? Могут ли они узнать о том что я стукач обратившись за помощью к Сплетнице или другому мыслителю? Стоит ли мне уже бежать из города? Или тогда Перекидыши при поддержке русских мафиоза или русских спецслужб типа "Красной Рукавички" найдут меня быстрее? Сплетница и Заказчик используют силы или у них осведомители в СКП?
-
-"ОГ - Просто добавим это в план."
-
-Может потом я еще вернусь, но сейчас чтобы продвинутся вперёд, мне нужно изменится, стать тем чьё предательство ни телепатка, ни предсказатели не смогут предвидеть. 
-
-Отпустить старую форму и здаться прежде чем ущерб от текущих убеждений привысит комфортный порог и лишит меня спокойствия. 
-
-" - Мне нужен Узор для форсирования размножения нейральных стволовых клеток."
-
-Нейросфе́ра — сферообразное скопление нейрональных стволовых клеток либо клеток-предшественников in vitro[1] (при помещении их в среду, не содержащую сыворотки). При внесении нейросферы в сыворотку клетки начинают дифференцироваться и выходить за пределы скопления.
-
-В воображении всплывает Узор, словно навязчивое воспоминание он оттягивает на себя большую часть моего внимания. Я назвал его Рост.
-
-Мне нужен новый кодекс. Которым я буду кормить телепатку. Нужно убедить себя в том что я тот кто им нужен и что я буду хорошим союзником. У меня небыло при себе блокнота, по этому я принялся записывать и стркуктурировать мысли, организмами на стенках и потолке контейнера:
-
-"
-_Аргумменты:
-
-
-__Первое, запоминание:
-
-Я помню оскорбления полученные в детстве. Какие вещества виновны в том что эти воспоминания поселились у меня в голова на десятки лет? Я помню что я чуствовал Картизол и Норадреналин. 
-Из роликов по нейробиологии я знаю что в детском мозге содержится очень много Цитиколина. 
-Из опыта с ноотропами я знаю что для нейропротекции и нейрогенеза используются Прамирацетам, Оксирацетам, Псилоцибин, Ежевикгребенчатый, Ниацин, нейростволовые клетки для повышения регенерирующих способностей нейронов.
-Из опыта с Потоком Образов, у меня в памяти лучше сохранились те сессии в которых я использовал обратную связь, записывал в ручную, или на диктофон, или представлял что меня кто-то слушает.
-Зависимость от "формы личности" можна выразить как нейронную сеть. " - Мы то что мы едим.". " - Побеждает тот волк которого ты кормишь.". Нужно оставить не целесообразную нейронку без питания и запитать новую.
-
-__Второе, программирование:
-
-Каждый раз выходя из своих Чертогов Разума, мы сталкиваемся с окружающей средой, поток информации из которой, автономно программирует человеческий биокомпьютор на уровне ниже нашего сознания. Как когда ты замечаешь напряжение в аудитории прежде чем осознаешь наличие конфликтной ситуации. Я буду применять вытеснение мыслей не свойственных новой нейронке и насильно репитировать мысли которые у меня должны быть чтобы телепатка или предсказательница не ожидала от меня противодействия Undersiders. Мысли нужно подкрепить поступками и привычками характерными новой форме сознания. Стартом для зарождения новой личности может быть психодраматическая перезагрузка в виде разыгрывания архитипичного внутреннего сценария с помощью "Потока Образов". Предварительно нужно отыграть сценарий РигорМортис, закрывающий гештальт и символизирующий в ритуальной форме смерть предыдущей личности. Комуникацию с биокомпьютером придётся осуществлять через образы и сценарии.
-
-__Третье, внушение:
-
-Вера в истинность и важность получемой инфы, "Aha-моммент". Так же его вроде называют "Проблеском Гениальности". Я испытывал его во время експерримментов с серотониновыми рицепторами. Для этой задачи подойдёт Псилоцибин как родственник ДМТ, который является в свою очередь родственником серотонина.
-"
-
-"
-_Действия:
-
-
-__Первое, скафандр:
-
-Синтез агонистов Картизола, Норадреналина и Ацетилхолина. Синтез Цитиколина, Ниацина, Псилоцибина, рацетамовых нейропротекторов. Вырастить в кишечнике порцию Ежевикагребенчатого. В Системе Целитель активировать узор Рост.
-
-__Второе, эго:
-
-Меня похитили и силой заставили делать плохие наркотики. Я использовал СКП чтобы спастись, от злых русских приехавших в мою страну делать террроризм, а теперь когда СКП скомпрометировано тем что уже дважды, не смогли меня защитить, мне нужен новый союзник. У меня мощьный стояк на Сплетницу. У Заказчика, Сплетницы, Перекидышей могут быть источники или бекдоры в СКП, а значит СКП скомпрометированы и продолжение взаимодействия с ними может раскрыть меня. На случай если я буду расскрыт, " - Я был вынужден сотрудничать с СКП, мне нужна была защита.". Перекидыши скопромметированы инфой от Сплетницы, без СКП проверить эту инфу ... . Сплетница и Заказчик, нашли меня посреди города в фургоне СКП, разве такие операции не проводятся с применением противошпионских или антимыслительских или антипредсказательских протоколов? Скомпрометированы по умолчанию.  
-
-__Третье, кодекс:
-
-Меняйся.
-Микро-победы.
-Сдавайся сразу.
-Уровни и УРОВНИ.
-Все скомпрометированы.
-Расширяй зону комфорта.
-Нет системы, нет нихера.
-
-Не ври себе.
-Не извинияйся.
-Не выходи из комнаты.
-Не уступай свои ценности.
-
-Что я знаю и почему я думаю что знаю это.
-То, что может быть разрушено правдой, должно быть разрушено.
-Как бы поступил антагонист уровнем выше?
-
-Форма медузы: План, Принятие, Поток.
-Форма скафандра: Дыхание, Позвоночник, Медленность, Скромность, Режим, Отчёт.
-
-Действовать исходя из противоречащих друг другу убеждений.
-"
-
-Оставатся здесь я счёл не безопасным, по этому вернул на себя все организмы. Покрыл ими халат и комбинезон, сделав их чёрными и матовыми, чтобы меньше привленать внимание. Убрал маску и привёл себя в подобие гражданского вида.
-
-Я сосредоточился на повторение Нового Кодекса и Нового Эго.
-
-Мои ключи, деньги, карты и телефоны остались в лабе. Я пешим ходом отправился в свой отель. Мне нужно было добратся до ноута и попытатся выйти на связь с Перекидышами. Контакт с куратором противоречил поступкам характерным для "не крота". По дороге я тренеровался делать записи своими организмами на стенах и тротуарах, постепенно стирая записи и отправляя их следом за мной. Я шел медленно, мои организмы перемещались за мной по земле еще медленне. Приходилось переключать их в режим автономного питания. Если я не вернусь за ними то через сутки они "разрядятся" и скорее всего начнут умирать от голода. Я оставлял за собой не опасные для людей Узоры. Самым быстрым моим организмом был, вырощеный из Системы Целитель, спасибо Панацее, СЦ была выращена из мышечных волокон. Предельная скорость пять миллиметров в секунду. Обычные организмы так не могли и мои организмы не будучи заряжены Узором, такой прыти не проявляли. Рабочая теория: я перемещаю свои организмы Узором. Подобие био-кинеза.
-
-Нужно было больше узнать о пределах способностей Сплетницы, не обращаясь к Куратору и так чтобы при этом, она не догадалась что я её проверяю.
+- Undersiders. - Ответил Мрак.
