--- a/R0_tail/inf/pers/стая/Хранители.md
+++ b/R0_tail/inf/pers/стая/Хранители.md
@@ -8,6 +8,11 @@
 2.1. перемещение в созданных временных потоках.
 3. Магический Технарь. Зелья и амулеты наделяющие частичкой сил от Агентов в зоне ДОМ.
 
+[[табаки]]
+1. ходок
+2. воспоминания в запахи, разговоры и песни в ракушки орешки, сны в полые тыквы и яблоки
+3. инфу только ту что попала в зону дом
+
 [[Хранитель Гравитации]][[Саара]]
 
 
